--- a/app/frontend/css/style.css
+++ b/app/frontend/css/style.css
@@ -56,11 +56,13 @@ option {
 }
 
 .bookmarks_container {
-    height: 25rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: start;
+    height: 100vh;
+    gap: 4.5rem;
+    /* overflow:hidden; */
 }
 
 .bookmarks_container h1 {
